fix(settings): boutons d'action invisible en 50 nuance de gris mantis 8173

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -2144,7 +2144,7 @@ body{
                 .menu{
                     &.toolbar{
                         a{
-                            color:var(--secondary-text-color)!important;
+                            color:var(--alternative-layout-list-text-color)!important;
                         }
                     }
                 }
